# skola

./: uloha.java
PG1/Bresenham/: .project
PG1/CG1.Ex03/: CG1.Ex03.csproj  Form1.cs  Program.cs
PG1/CV1/: CG1.Ex01.sln  CG1.Ex01.userprefs
PG1/CV2/: CG1.Ex02.sln  CG1.Ex02.userprefs
PG1/CV4/: CG1.Ex05.sln
PG1/CV5/: CG1.Ex04.sln
PG1/CV7/: CG1.Ex07.sln  CG1.Ex07.userprefs
PG1/CV8/: CG1.Ex08.sln  CG1.Ex08.userprefs
ZUI1/CV4/: .project
ZUI1/p1-bludisko/: .project  changelog.txt  readme.txt
ZUI1/p2-reverzi/: .project
ZUI1/p3-wumpus_world/: .project
ZUI2/cv10/: cv11.m
ZUI2/cv11/: cv12.m  next_state.m
ZUI2/cv12/: party.data
ZUI2/cv2/: cv2.m  cv2.m~  octave-workspace
ZUI2/cv3/: cv3.mat  data2.mat
ZUI2/cv4/: cv4.m  octave-workspace
ZUI2/cv5/: cv5.m  data.mat  octave-workspace
ZUI2/cv6/: cv6.m  data.mat  octave-workspace  reg.m
ZUI2/cv7/: cv7.m
ZUI2/cv8/: cv8.m
ZUI2/cv9/: cv9.m  test.py
ZUI2/projekt1/: octave-workspace  proj1Document.odt
ZUI2/projekt2/: zui2.odt
diplomovka/diplomovka_gui/: CMakeLists.txt  config_build.conf
diplomovka/diplomovka_gui/data/: age_images_mean.binaryproto  age_model.caffemodel  age_predict.prototxt  gender_images_mean.binaryproto  gender_model.caffemodel
diplomovka/diplomovka_gui/src/: Classifier.h  findEyeCenter.cpp  main.cpp  q_normalizer.cpp  q_normalizer.h
mbio/uloha2/: CMakeLists.txt  build.sh  config_build.conf  odovzdaj.odt  readme.txt
mbio/uloha2/src/: main.cpp
modelovanie/: du1.m  du2.mat  du3.mat  func.m  m.m  octave-workspace
nn/: .project
strojove/: DU12.octave  dict.txt  poznamky  uloha.odt
vkti2/: asdsd
webdizajn/: add_post.php  article.html  article.php  blog  blog.db  blog.php  blog2  blog3  common.php  index.php  utils.php
(+381 files in other folders)
